--- a/assignment/index.html
+++ b/assignment/index.html
@@ -5,8 +5,14 @@
     <title>Unit 5, Part 2 - HTML/CSS Practice</title>
   </head>
   <body>
+    <header>
     <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
+    <h2>Jack's Record Shop</h2>
+    </header>
+    <main>
     <p>See console for output.</p>
+    </main>
+    </body>
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
