--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Unit 5, Part 2 - HTML/CSS Practice</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
@@ -16,3 +17,4 @@
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
+ 
