finished assignment and did random css, deleted some and keep some basics. Some don't seem to work, gotta look up why.

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,13 +8,20 @@
   <body>
     <header>
     <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
-    <h2>Jack's Record Shop</h2>
+    <h2 class="store">Jack's Record Shop</h2>
     </header>
     <main>
     <p>See console for output.</p>
     </main>
     </body>
     <!-- Create an unordered list with any questions you have -->
+    <ul>
+      1. missing something with the elements
+      2. how to know when fuctions are defined versus not?
+      3. since functions are each separate are all of the elements inside them as well?
+      4. is there a limit to object length?
+    </ul>
   </body>
+  <footer class="Trademark">Company Trademark</footer>
 </html>
  
